# Airbyte-Hackathon-GGG

./: .gitignore  LICENSE  README.md  app.py  instructions.txt  pyproject.toml  requirements.txt
Notebooks/: DateTimeDimGen.py  FactTableAdHoc.py  MotherDuckConnect.py  TimeDimGen.py  csvbackup.py  datedimgen.py  datetime.py  modeleda.py  sourcedimgen.py  sourcetableEDA.py  sourcetableerrors.py  starschemaEDA.py  starschemadocs.py  starschemanalysis.py  uniontable.py  windpower2023ddl.py
Notebooks/connectiontest/: MotherDuckConnect.py  firstapp.py  shareconntest.py
Notebooks/tempdashboard/: FactTableAdHoc.py  modeleda.py  starschemadocs.py  windpower2023ddl.py
dbt/gggfingrid/: dbt_project.yml  profiles.yml
dbt/gggfingrid/analyses/: rawsourceTimecheck.sql
dbt/gggfingrid/models/marts/dimensions/: DimDate.sql  DimSource.sql  DimTime.sql  _dimensions__schema.yml  dim_date.sql  dim_sources.sql  dim_time.sql
dbt/gggfingrid/models/marts/energy_production/: _fact__schema.yml  fct_sources.sql  obt_fct_tbl.sql
dbt/gggfingrid/models/marts/energy_production/presentation/: fct_srcs_piv.sql
dbt/gggfingrid/models/presentation/: daily_grid_piv.sql  daily_statistics_rollup.sql  grid_pivot.sql  hourly_statistics.sql  stg_fct_srcs_piv.sql
dbt/gggfingrid/models/staging/fingrid/: _fingrid_models.yml  _fingrid_sources.yml  schema.yml  src_fingrid_model.sql  stg_fingrid__consumption.sql  stg_fingrid__hydro.sql  stg_fingrid__nuclear.sql  stg_fingrid__totalelec.sql  stg_fingrid__wind.sql
dlt/: filesystem_pipeline.py  fingrid.ipynb  rest_api_pipeline.py
dlt/.dlt/: config.toml
(+5 files in other folders)
