[project]
name = "airbyte-hackathon-ggg"
version = "0.1.0"
description = "The Airbyte+Motherduck hackathon project by the Green Grid Geeks team."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.1.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "streamlit>=1.41.1",
]
